<resources>
    <string name="app_name">Sickluded</string>
    <string name="recently_visited">Recently Visited</string>
    <string name="drawer_open">open</string>
    <string name="drawer_closed">close</string>
    <string name="Places_Key">AIzaSyCrZCOySNe-JQvq-ZmlkM6ZThAv8uY3r8I</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Nearby_apiKey">AIzaSyD7n7fdKM6nYL81aD3FKriOmszS2uJms9U</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Have an account? Log in</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_username">New Username</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="new_password">New Password</string>
    <string name="tracking_enabled_notification">Tracker Enabled</string>
    <string name="tracker">Tracker</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="map">Map</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="new_email">New Email</string>
    <string name="national_statistics">National Statistics</string>
    <string name="total_cases">Total Cases</string>
    <string name="recovered">Recovered</string>
    <string name="critical">Critical</string>
    <string name="active">Active</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="location_statistics">Location Statistics</string>
    <string name="symptoms">Symptoms</string>
    <string name="stopTracker">Click to stop tracker</string>
    <string name="next">Next</string>
    <string name="click_on_the_marker_that_appears_after_you_have_searched_for_a_location">Click on the marker that appears after a search.  </string>
    <string name="follow_the_prompt_to_add_a_location">Follow the prompts that follow to add a location.</string>
    <string name="adding_a_location">Adding a Location</string>
    <string name="nearby_tracker">Nearby Tracker</string>
    <string name="symptoms_of_covid_19">Symptoms of COVID-19</string>
    <string name="most_common">Most Common</string>
    <string name="fever">- Fever</string>
    <string name="dry_cough">- Dry cough</string>
    <string name="tiredness">- Tiredness</string>
    <string name="less_common">Less Common</string>
    <string name="aches_and_pains">- Aches and pains</string>
    <string name="sore_throat">- Sore throat</string>
    <string name="diarrohea">- Diarrohea</string>
    <string name="headache">- Headache</string>
    <string name="loss_of_taste_of_smell">- Loss of taste of smell</string>
    <string name="rash_on_skin_or_discolouration_of_fingers_or_toes">- Rash on skin, or discolouration of fingers or toes</string>
    <string name="serious_symptoms">Serious Symptoms</string>
    <string name="what_to_do_if_you_are_experiencing_symptoms">If You Are Experiencing Symptoms</string>
    <string name="confirm">Confirm</string>
    <string name="request_contact">Request Contact</string>
    <string name="enter_your_diagnosis">Diagnosis</string>
    <string name="zero">0</string>
    <string name="locationStats">Location Statistics</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="change_your_email">Change Your Email</string>
    <string name="change_your_username">Change Your Username</string>
    <string name="login2">Login</string>
    <string name="change_username">Change Username</string>
    <string name="change_email">change Email</string>
    <string name="delete_account">Delete Account</string>
    <string name="tutorial">Tutorial</string>
    <string name="logo">Logo</string>
    <string name="recording_diagnosis">Recording Diagnosis and Requesting Contact </string>
    <string name="tracker_tutorial">The Nearby Tracker uses Google\'s Nearby Messages Services.\n Making use of Bluetooth Low Energy and Wifi it tracks whether you have been in close proximity with other users.</string>
    <string name="daignosis_tutorial">If you have been diagnosed with Covid-19, record so in the Diagnose page. \n Individuals who has been in contact with you will then be notified, no personal details will be shared. \n Here you can also request if you are at risk for the virus.</string>
    <string name="what_to_do">-Seek immediate medical attention if you have serious symptoms. \n\n -If you have mild symptoms and are otherwise healthy, you should manage your symptoms at home. \n\n -On average it takes 5–6 days from when someone is infected with the virus for symptoms to show, however it can take up to 14 days.</string>
    <string name="serious_sympt">- Difficulty breathing, or shortness of breath \n- Loss of speech or movement \n- Chest pain, or pressure</string>
    <string name="theme">Theme</string>
    <string name="dark_mode">Dark Mode</string>
</resources>
