<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="all"
        android:id="@+id/g1">
    <group
        android:id="@+id/g2">
        <item
            android:id="@+id/Home"
            android:icon="@drawable/ic_home"
             android:title="@string/home" />
        <item
            android:id="@+id/Map"
            android:icon="@drawable/ic_map"
            android:title="@string/map" />

        <item
            android:id="@+id/LocationStats"
            android:icon="@drawable/ic_stat"
            android:title="@string/locationStats" />

        <item
            android:id="@+id/Symptoms"
            android:icon="@drawable/ic_diagnosis"
            android:title="@string/symptoms" />


        <item
            android:id="@+id/Diagnosis"
            android:icon="@drawable/ic_diagnosis2"
            android:title="@string/diagnosis" />

    </group>

    <item
        android:id="@+id/Tracker"
        android:icon="@drawable/ic_tracker"
        android:title="@string/tracker"
        />
    </group>


    <group
        android:id="@+id/g3"
        >
        <item
            android:id="@+id/Settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/Logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>

</menu>