<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SymptomsActivity">

    <TextView
        android:id="@+id/SymptomsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/symptoms_of_covid_19"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/blood"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/mostCommonTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/most_common"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/color_one"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mostCommonTitle"
                android:orientation="vertical"
                android:paddingStart="50dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fever"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dry_cough"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tiredness"
                    android:textColor="@color/textColor"/>
            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75">

            <TextView
                android:id="@+id/LessCommonTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/less_common"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/color_one"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/LessCommonTitle"
                android:orientation="vertical"
                android:paddingStart="50dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aches_and_pains"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sore_throat"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diarrohea"
                    android:textColor="@color/textColor"/>

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/headache"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loss_of_taste_of_smell"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rash_on_skin_or_discolouration_of_fingers_or_toes"
                    android:textColor="@color/textColor" />
            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/seriousSymptomsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/serious_symptoms"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/color_one"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/seriousSymptomsTitle"
                android:orientation="vertical"
                android:paddingStart="50dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serious_sympt"
                    android:textColor="@color/textColor" />


            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <TextView
                android:id="@+id/whatToDO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/what_to_do_if_you_are_experiencing_symptoms"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/color_one"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/whatToDO"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what_to_do"
                    android:textColor="@color/textColor"
                    android:textAlignment="center"/>


            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>