<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="50dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_icon" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_isolated_monochrome_black" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/national_statistics"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/blood"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="5dp"
            android:text="@string/total_cases"
            android:textAlignment="center"
            android:textColor="@color/color_one"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingTop="5dp"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="5dp"
            android:text="@string/active"
            android:textAlignment="center"
            android:textColor="@color/color_one"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvActive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingTop="5dp"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="5dp"
            android:text="@string/recovered"
            android:textAlignment="center"
            android:textColor="@color/color_one"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRecovered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingTop="5dp"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="5dp"
            android:text="@string/critical"
            android:textAlignment="center"
            android:textColor="@color/color_one"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCritical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingTop="5dp"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="5dp"
            android:text="@string/total_deaths"
            android:textAlignment="center"
            android:textColor="@color/color_one"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTotalDeaths"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingTop="5dp"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>


